binread/tests/ui/invalid_keyword_enum.stderr
error: expected one of: `big`, `little`, `map`, `try_map`, `magic`, `import`, `import_tuple`, `assert`, `pre_assert`, `return_all_errors`, `return_unexpected_error`
 --> $DIR/invalid_keyword_enum.rs:4:6
  |
4 | #[br(invalid_enum_keyword)]
  |      ^^^^^^^^^^^^^^^^^^^^
